--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -14,7 +14,11 @@ html {
     font-family: "Inter";
 }
 
-*:not(.fa-solid):not(.fa):not(.e-icons){
+.main-content {
+    margin-left: 290px;
+}
+
+*:not(.fa-solid):not(.fa):not(.e-icons) {
     font-family: "Inter";
 }
 
@@ -24,24 +28,24 @@ body {
     color: #fff;
 }
 
-.e-bigger{
+.e-bigger {
     font-size: x-large;
 }
 
 /*Button*/
-.btn:focus, .btn:active{
+.btn:focus, .btn:active {
     outline: none !important;
     box-shadow: none;
 }
 
 /*Breadcrumb*/
-.e-breadcrumb a, .e-breadcrumb a:hover{
+.e-breadcrumb a, .e-breadcrumb a:hover {
     text-decoration: none !important;
     color: inherit !important;
 }
 
 /*HyperLink*/
-.no-a-decoration, .no-a-decoration:hover{
+.no-a-decoration, .no-a-decoration:hover {
     text-decoration: none;
     color: #fff;
 }
@@ -52,11 +56,11 @@ body {
     border-radius: 5px;
 }
 
-    .e-grid .e-gridcontent, .e-grid .e-table {
+.e-grid .e-gridcontent, .e-grid .e-table {
     background-color: #1a222b;
 }
 
-    .e-grid .e-gridheader {
+.e-grid .e-gridheader {
     border: 5px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -64,20 +68,20 @@ body {
     background-color: #222b33;
 }
 
-        .e-grid .e-gridheader .e-headercell {
+.e-grid .e-gridheader .e-headercell {
     background-color: #222b33;
 }
 
-    .e-grid .e-gridpager {
+.e-grid .e-gridpager {
     background-color: #1a222b;
 }
 
-    .e-grid .e-pagercontainer {
+.e-grid .e-pagercontainer {
     border: none;
     background-color: #1a222b;
 }
 
-    .e-grid .e-content table {
+.e-grid .e-content table {
     padding: 0px 10px;
 }
 
@@ -92,15 +96,15 @@ body {
     padding: 15px !important;
 }
 
-    .e-pager .e-numericitem:not(.e-currentitem) {
+.e-pager .e-numericitem:not(.e-currentitem) {
     border: none !important;
 }
 
-    .e-pager .e-numericitem:hover {
+.e-pager .e-numericitem:hover {
     color: #fff;
 }
 
-    .e-pager .e-numericitem.e-currentitem {
+.e-pager .e-numericitem.e-currentitem {
     color: #fff;
     border: none !important;
     background-color: #31373d;
@@ -120,30 +124,64 @@ body {
 
 /*Radio button group*/
 
-.e-btn-group.custom-rbt-group{
+.e-btn-group.custom-rbt-group {
     width: 100%;
 }
 
-.e-btn-group.custom-rbt-group.e-btn{
+.e-btn-group.custom-rbt-group.e-btn {
     width: 50%;
 }
 
-.custom-rbt-group label.e-btn{
+.custom-rbt-group label.e-btn {
     box-shadow: none !important;
     border: 1px solid #fff;
-    background-color: rdb(34 43 51);
+    background-color: rgb(34 43 51);
     color: #fff;
 }
 
-.e-btn-group .custom-rbt-group input:checked + label.e-btn{
+.e-btn-group .custom-rbt-group input:checked + label.e-btn {
     background-color: #fff;
     color: #212b36;
     border: 1px solid #fff;
 }
 
+/*SideBar*/
+#sidebar {
+    background-color: #12161d;
+    border-right: 1px dashed rgba(72, 82, 85, 0.24);
+    padding: 10px 20px;
+}
+
 /*Widget*/
 
-.widget{
+.widget {
     border-radius: 1rem;
     background-color: #1a222b;
+}
+
+.widget.summary > div:first-child {
+    background-color: #222b33;
+    padding: 1rem;
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+}
+
+.widget.summary > div:first-child i {
+    font-weight: bold;
+}
+
+.widget.income > div:first-child {
+    color: #65da41;
+}
+
+.widget.expense > div:first-child {
+    color: #ff4e48;
+}
+
+.widget.balance > div:first-child {
+    color: #2aa1ff;
+}
+
+.widget.chart {
+    padding: 5px;
 }
