--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -68,5 +68,82 @@
             </div>
         </div>
     </div>
-    <div class="col-md-8"></div>
+    <div class="col-md-8">
+        <div class="widget chart">
+            <div class="p-4">
+                <h5 class="fw-bold">Income vs Expense</h5>
+                <ejs-chart id="splinechart" background="#1a222b" palettes="@(new string[] { "#54ffa9", "#ffe91a" })">
+                    <e-chart-primaryxaxis valueType="Category">
+                        <e-majorgridlines width="0"></e-majorgridlines>
+                        <e-majorticklines width="0"></e-majorticklines>
+                    </e-chart-primaryxaxis>
+                    <e-chart-primaryyaxis>
+                        <e-majorgridlines width="1" color="#32414d" dashArray="3,5"></e-majorgridlines>
+                        <e-majorticklines width="0"></e-majorticklines>
+                        <e-linestyle width="0"></e-linestyle>
+                    </e-chart-primaryyaxis>
+                    <e-chart-chartarea>
+                        <e-chartarea-border width="0"></e-chartarea-border>
+                    </e-chart-chartarea>
+                    <e-series-collection>
+                        <e-series
+                            dataSource="@ViewBag.SplineChartData"
+                            xName="Day"
+                            yName="Income"
+                            name="Income"
+                            type="@Syncfusion.EJ2.Charts.ChartSeriesType.Spline"
+                            width="3">
+                        </e-series>
+                        <e-series
+                            dataSource="@ViewBag.SplineChartData"
+                            xName="Day"
+                            yName="Expense"
+                            name="Expense"
+                            type="@Syncfusion.EJ2.Charts.ChartSeriesType.Spline"
+                            width="3">
+                        </e-series>
+                    </e-series-collection>
+                    <e-chart-legendsettings
+                        position="Top"
+                        alignment="Far">
+                        <e-legendsettings-textstyle color="#fff" size="1rem"></e-legendsettings-textstyle>
+                    </e-chart-legendsettings>
+                    <e-chart-tooltipsettings enable shared></e-chart-tooltipsettings>
+                </ejs-chart>
+            </div>
+        </div>
+    </div>
+</div>
+
+@* Recent Transactions *@
+<div class="row">
+    <div class="col-md-6">
+        <div class="widget">
+            <div class="p-4">
+                <h5 class="fw-bold">Recent Transactions</h5>
+            </div>
+            <div class="px-4 pb-4">
+                <ejs-grid
+                    id="recent-transactions"
+                    dataSource="@ViewBag.RecentTransactions"
+                    gridLines="None">
+                    <e-grid-columns>
+                        <e-grid-column headerText="Category" field="CategoryTitle"></e-grid-column>
+                        <e-grid-column headerText="Date" field="Date" type="date" format="MMM-dd-yy" textAlign="Left" width="110px"></e-grid-column>
+                        <e-grid-column headerText="Amount" field="FormattedAmount" textAlign="Right" width="110px"></e-grid-column>
+                    </e-grid-columns>
+                </ejs-grid>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="widget h-100">
+            <div class="d-flex justify-content-center align-items-center h-100">
+                <span>
+                    <i class="fa-solid fa-plus fa-2xl"></i>
+                    Widget
+                </span>
+            </div>
+        </div>
+    </div>
 </div>
