--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,52 +15,53 @@
 
 <body class="e-bigger">
 <partial name="_SideBar"/>
-<header>
+<div class="dock-target">
     <nav class="navbar sticky-top">
         <div class="container-fluid py-2 px-4">
             <i class="fa-solid fa-magnifying-glass"></i>
             <div>
                 <i class="fa-solid fa-bell"></i>
                 <i class="fa-solid fa-message"></i>
-                <img class="profile-pic" src="~/blank-profile-picture-973460_960_720.webp" alt="Profile image   ">
+                <img class="profile-pic" src="~/blank-profile-picture-973460_960_720.webp" alt="Profile image">
             </div>
         </div>
     </nav>
-</header>
-<div class="main-content">
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="@(ViewData["isDashboard"] == null ? "col-md-10" : "col-md-12")">
-                <main role="main" class="pb-3">
-                    @if (ViewData["isDashboard"] == null)
-                    {
-                        <div class="row">
-                            <div class="col-md-7">
-                                <div class="d-flex flex-column mb-5">
-                                    <div class="d-flex mb-1">
-                                        <div class="flex-grow-1">
-                                            <h3 class="fw-bold">@ViewData["PageTitle"]</h3>
+    <div class="main-content">
+        <div class="container mt-5">
+            <div class="row justify-content-center">
+                <div class="@(ViewData["isDashboard"] == null ? "col-md-10" : "col-md-12")">
+                    <main role="main" class="pb-3">
+                        @if (ViewData["isDashboard"] == null)
+                        {
+                            <div class="row">
+                                <div class="col-md-7">
+                                    <div class="d-flex flex-column mb-5">
+                                        <div class="d-flex mb-1">
+                                            <div class="flex-grow-1">
+                                                <h3 class="fw-bold">@ViewData["PageTitle"]</h3>
+                                            </div>
+                                            <div>
+                                                @if (ViewData["PageActionText"] != null)
+                                                {
+                                                    <a href="@(ViewData["PageActionUrl"])" class="btn btn-success">@ViewData["PageActionText"]</a>
+                                                }
+                                            </div>
                                         </div>
-                                        <div>
-                                            @if (ViewData["PageActionText"] != null)
-                                            {
-                                                <a href="@(ViewData["PageActionUrl"])" class="btn btn-success">@ViewData["PageActionText"]</a>
-                                            }
-                                        </div>
+                                        <ejs-breadcrumb id="breadcrumb"
+                                                        separatorTemplate="@Html.Raw("<span class='fa-solid fa-angle-right'></span>")">
+                                        </ejs-breadcrumb>
                                     </div>
-                                    <ejs-breadcrumb id="breadcrumb"
-                                                    separatorTemplate="@Html.Raw("<span class='fa-solid fa-angle-right'></span>")">
-                                    </ejs-breadcrumb>
                                 </div>
                             </div>
-                        </div>
-                    }
-                    @RenderBody()
-                </main>
+                        }
+                        @RenderBody()
+                    </main>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
